add completion streaming support

--- a/examples/completion.ipynb
+++ b/examples/completion.ipynb
@@ -45,6 +45,29 @@
     "\n",
     "print(result.choices[0].text)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use `Completion.stream` to stream a completion response."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import commonbase\n",
+    "\n",
+    "project_id=\"<YOUR PROJECT_ID>\"\n",
+    "\n",
+    "result = commonbase.Completion.stream(project_id=project_id, prompt=\"Write me a short essay about artificial intelligence.\")\n",
+    "\n",
+    "for completion in result:\n",
+    "    print(completion.choices[0].text, end=\"\")"
+   ]
   }
  ],
  "metadata": {
