improve documentation and usability

--- a/examples/completion.ipynb
+++ b/examples/completion.ipynb
@@ -26,6 +26,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Usage"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "A project ID is required for all Commonbase requests. You can find your project ID in the [Commonbase Dashboard](https://commonbase.com/test-50727/project/test/overview).\n",
     "\n",
     "To create a completion, provide your project ID and prompt to the `Completion.create` class method."
@@ -67,6 +74,43 @@
     "\n",
     "for completion in result:\n",
     "    print(completion.choices[0].text, end=\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Chat\n",
+    "\n",
+    "To create a chat completion, use the `context` method to provide a list of chat messages.\n",
+    "You must also set the OpenAI configuration to `chat`. In this mode, the `prompt` argument\n",
+    "functions as a system message."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import commonbase\n",
+    "\n",
+    "project_id=\"<YOUR PROJECT_ID>\"\n",
+    "\n",
+    "result = commonbase.Completion.create(\n",
+    "    project_id=project_id,\n",
+    "    prompt=\"You are an assistant who helps users with tech problems.\",\n",
+    "    chat_context=commonbase.ChatContext([\n",
+    "        commonbase.ChatMessage(role=\"user\", content=\"My internet isn't working.\"),\n",
+    "        commonbase.ChatMessage(role=\"assistant\", content=\"Have you tried restarting your router?\"),\n",
+    "        commonbase.ChatMessage(role=\"user\", content=\"Yes I've tried that.\"),\n",
+    "    ]),\n",
+    "    provider_config=commonbase.ProviderConfig(\n",
+    "        provider=\"cb-openai-eu\", params=commonbase.OpenAIParams(type=\"chat\")\n",
+    "    ),\n",
+    ")\n",
+    "\n",
+    "print(result.choices[0].text)"
    ]
   }
  ],
