fix dashboard url in readme and examples

--- a/examples/completion.ipynb
+++ b/examples/completion.ipynb
@@ -33,7 +33,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A project ID is required for all Commonbase requests. You can find your project ID in the [Commonbase Dashboard](https://commonbase.com/test-50727/project/test/overview).\n",
+    "A project ID is required for all Commonbase requests. You can find your project ID in the [Commonbase Dashboard](https://commonbase.com/).\n",
     "\n",
     "To create a completion, provide your project ID and prompt to the `Completion.create` class method."
    ]
