fix typo in documentation

--- a/examples/completion.ipynb
+++ b/examples/completion.ipynb
@@ -82,7 +82,7 @@
    "source": [
     "### Chat\n",
     "\n",
-    "To create a chat completion, use the `context` method to provide a list of chat messages.\n",
+    "To create a chat completion, use the `chat_context` argument to provide a list of chat messages.\n",
     "You must also set the OpenAI configuration to `chat`. In this mode, the `prompt` argument\n",
     "functions as a system message."
    ]
