chore: revise examples & readme

--- a/examples/completion.ipynb
+++ b/examples/completion.ipynb
@@ -46,7 +46,7 @@
    "source": [
     "import commonbase\n",
     "\n",
-    "project_id=\"<YOUR PROJECT ID>\"\n",
+    "project_id=\"<YOUR_PROJECT_ID>\"\n",
     "\n",
     "result = commonbase.Completion.create(project_id=project_id, prompt=\"Hello!\")\n",
     "\n",
@@ -68,12 +68,15 @@
    "source": [
     "import commonbase\n",
     "\n",
-    "project_id=\"<YOUR PROJECT_ID>\"\n",
+    "project_id=\"<YOUR_PROJECT_ID>\"\n",
     "\n",
     "result = commonbase.Completion.stream(project_id=project_id, prompt=\"Write me a short essay about artificial intelligence.\")\n",
     "\n",
     "for completion in result:\n",
-    "    print(completion.choices[0].text, end=\"\")"
+    "    if not completion.completed:\n",
+    "        print(completion.choices[0].text, end=\"\")\n",
+    "    else:\n",
+    "        print(\"\\n\\ndone\")"
    ]
   },
   {
@@ -95,7 +98,7 @@
    "source": [
     "import commonbase\n",
     "\n",
-    "project_id=\"<YOUR PROJECT_ID>\"\n",
+    "project_id=\"<YOUR_PROJECT_ID>\"\n",
     "\n",
     "result = commonbase.Completion.create(\n",
     "    project_id=project_id,\n",
