feat: add variables and API Key support

--- a/examples/completion.ipynb
+++ b/examples/completion.ipynb
@@ -33,9 +33,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A project ID is required for all Commonbase requests. You can find your project ID in the [Commonbase Dashboard](https://commonbase.com/).\n",
+    "A Project ID and API Key are required for all Commonbase requests. You can find your project ID and generate an API key in the [Commonbase Dashboard](https://commonbase.com/).\n",
     "\n",
-    "To create a completion, provide your project ID and prompt to the `Completion.create` class method."
+    "To create a completion, provide your Project ID, API Key, and prompt to `Completion.create`."
    ]
   },
   {
@@ -46,11 +46,13 @@
    "source": [
     "import commonbase\n",
     "\n",
-    "project_id=\"<YOUR_PROJECT_ID>\"\n",
+    "result = commonbase.Completion.create(\n",
+    "    api_key=\"YOUR_API_KEY\",\n",
+    "    project_id=\"YOUR_PROJECT_ID\", \n",
+    "    prompt=\"Hello!\"\n",
+    ")\n",
     "\n",
-    "result = commonbase.Completion.create(project_id=project_id, prompt=\"Hello!\")\n",
-    "\n",
-    "print(result.choices[0].text)"
+    "print(result.best_result)"
    ]
   },
   {
@@ -68,15 +70,48 @@
    "source": [
     "import commonbase\n",
     "\n",
-    "project_id=\"<YOUR_PROJECT_ID>\"\n",
-    "\n",
-    "result = commonbase.Completion.stream(project_id=project_id, prompt=\"Write me a short essay about artificial intelligence.\")\n",
+    "result = commonbase.Completion.stream(\n",
+    "    api_key=\"YOUR_API_KEY\",\n",
+    "    project_id=\"YOUR_PROJECT_ID\", \n",
+    "    prompt=\"Write me a short essay about artificial intelligence.\"\n",
+    ")\n",
     "\n",
     "for completion in result:\n",
     "    if not completion.completed:\n",
-    "        print(completion.choices[0].text, end=\"\")\n",
+    "        print(completion.best_result, end=\"\")\n",
     "    else:\n",
+    "        # The final response from the stream contains the full completion text.\n",
+    "        # We can ignore it here because we already printed the intermediate results.\n",
     "        print(\"\\n\\ndone\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Variables\n",
+    "\n",
+    "You can also create a completion by providing variables for your managed prompt on the [Commonbase Dashboard](https://commonbase.com/)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import commonbase\n",
+    "\n",
+    "result = commonbase.Completion.create(\n",
+    "    api_key=\"YOUR_API_KEY\",\n",
+    "    project_id=\"YOUR_PROJECT_ID\", \n",
+    "    variables={\n",
+    "        \"user_name\": \"USERNAME\",\n",
+    "        \"email\": \"USERNAME@COMPANY.COM\"\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "print(result.best_result)"
    ]
   },
   {
@@ -98,10 +133,9 @@
    "source": [
     "import commonbase\n",
     "\n",
-    "project_id=\"<YOUR_PROJECT_ID>\"\n",
-    "\n",
     "result = commonbase.Completion.create(\n",
-    "    project_id=project_id,\n",
+    "    api_key=\"YOUR_API_KEY\",\n",
+    "    project_id=\"YOUR_PROJECT_ID\", \n",
     "    prompt=\"You are an assistant who helps users with tech problems.\",\n",
     "    chat_context=commonbase.ChatContext([\n",
     "        commonbase.ChatMessage(role=\"user\", content=\"My internet isn't working.\"),\n",
@@ -113,7 +147,7 @@
     "    ),\n",
     ")\n",
     "\n",
-    "print(result.choices[0].text)"
+    "print(result.best_result)"
    ]
   }
  ],
