--- a/examples/completion.ipynb
+++ b/examples/completion.ipynb
@@ -104,7 +104,8 @@
         "\n",
         "result = commonbase.Completion.create(\n",
         "    api_key=\"API_KEY\",\n",
-        "    project_id=\"PROJECT_ID\", \n",
+        "    project_id=\"PROJECT_ID\",\n",
+        "    prompt=\"A new user {{user_name}} just signed up with {{email}}. Say hello!\", \n",
         "    variables={\n",
         "        \"user_name\": \"USERNAME\",\n",
         "        \"email\": \"USERNAME@COMPANY.COM\"\n",
