update readme and examples

--- a/examples/completion.ipynb
+++ b/examples/completion.ipynb
@@ -52,14 +52,16 @@
         "    prompt=\"Hello!\"\n",
         ")\n",
         "\n",
-        "print(result.best_result)"
+        "print(result.best_choice.text)"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Use `Completion.stream` to stream a completion response."
+        "### Chat\n",
+        "\n",
+        "To create a chat completion, use the `ChatCompletion.create` with a list of messages."
       ]
     },
     {
@@ -70,15 +72,48 @@
       "source": [
         "import commonbase\n",
         "\n",
-        "result = commonbase.Completion.stream(\n",
+        "result = commonbase.ChatCompletion.create(\n",
         "    api_key=\"API_KEY\",\n",
         "    project_id=\"PROJECT_ID\", \n",
-        "    prompt=\"Write me a short essay about artificial intelligence.\"\n",
+        "    messages=[\n",
+        "        { \"role\": \"system\", \"content\": \"You are an assistant who helps users with tech problems.\" },\n",
+        "        { \"role\": \"user\", \"content\": \"My internet isn't working.\" },\n",
+        "        { \"role\": \"assistant\", \"content\": \"Have you tried restarting your router?\" },\n",
+        "        { \"role\": \"user\", \"content\": \"Yes I've tried that.\" }\n",
+        "    ]\n",
+        ")\n",
+        "\n",
+        "print(result.best_choice.text)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Streaming\n",
+        "\n",
+        "Use `ChatCompletion.stream` to stream a completion response."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import commonbase\n",
+        "\n",
+        "result = commonbase.ChatCompletion.stream(\n",
+        "    api_key=\"API_KEY\",\n",
+        "    project_id=\"PROJECT_ID\", \n",
+        "    messages=[\n",
+        "        { \"role\": \"user\", \"content\": \"Write me a short essay about artificial intelligence.\" }\n",
+        "    ]\n",
         ")\n",
         "\n",
         "for completion in result:\n",
         "    if not completion.completed:\n",
-        "        print(completion.best_result, end=\"\")\n",
+        "        print(completion.best_choice.text, end=\"\")\n",
         "    else:\n",
         "        # The final response from the stream contains the full completion text.\n",
         "        # We can ignore it here because we already printed the intermediate results.\n",
@@ -91,7 +126,7 @@
       "source": [
         "### Variables\n",
         "\n",
-        "You can also create a completion by providing variables for your managed prompt on the [Commonbase Dashboard](https://commonbase.com/)."
+        "You can also create a completion by providing a templated prompt with variables."
       ]
     },
     {
@@ -112,43 +147,7 @@
         "    }\n",
         ")\n",
         "\n",
-        "print(result.best_result)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "### Chat\n",
-        "\n",
-        "To create a chat completion, use the `chat_context` argument to provide a list of chat messages.\n",
-        "You must also set the OpenAI configuration to `chat`. In this mode, the `prompt` argument\n",
-        "functions as a system message."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "import commonbase\n",
-        "\n",
-        "result = commonbase.Completion.create(\n",
-        "    api_key=\"API_KEY\",\n",
-        "    project_id=\"PROJECT_ID\", \n",
-        "    prompt=\"You are an assistant who helps users with tech problems.\",\n",
-        "    chat_context=commonbase.ChatContext([\n",
-        "        commonbase.ChatMessage(role=\"user\", content=\"My internet isn't working.\"),\n",
-        "        commonbase.ChatMessage(role=\"assistant\", content=\"Have you tried restarting your router?\"),\n",
-        "        commonbase.ChatMessage(role=\"user\", content=\"Yes I've tried that.\"),\n",
-        "    ]),\n",
-        "    provider_config=commonbase.ProviderConfig(\n",
-        "        provider=\"cb-openai-eu\", params=commonbase.OpenAIParams(type=\"chat\")\n",
-        "    ),\n",
-        ")\n",
-        "\n",
-        "print(result.best_result)"
+        "print(result.best_choice.text)"
       ]
     }
   ],
