chore: fix typo

--- a/examples/completion.ipynb
+++ b/examples/completion.ipynb
@@ -61,7 +61,7 @@
       "source": [
         "### Chat\n",
         "\n",
-        "To create a chat completion, use the `ChatCompletion.create` with a list of messages."
+        "To create a chat completion, use `ChatCompletion.create` with a list of messages."
       ]
     },
     {
